--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,11 @@ dependencies {
     implementation("androidx.recyclerview:recyclerview-selection:1.1.0")
     // CardView
     implementation("androidx.cardview:cardview:1.0.0")
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
